--- a/module00/ex03/Makefile
+++ b/module00/ex03/Makefile
@@ -5,17 +5,18 @@
 #                                                     +:+ +:+         +:+      #
 #    By: ilouacha <ilouacha@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
-#    Created: 2025/11/15 06:18:52 by ilouacha          #+#    #+#              #
-#    Updated: 2025/11/15 06:18:53 by ilouacha         ###   ########.fr        #
+#    Created: 2025/11/15 06:19:17 by ilouacha          #+#    #+#              #
+#    Updated: 2025/11/16 01:32:33 by ilouacha         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
 # ----- Variables -----
-MCU = atmega328p            # c'est notre microcontrôleur
+MCU = atmega328p            # changer selon ton microcontrôleur
 F_CPU = 16000000UL          # fréquence du MCU
 CC = avr-gcc
 OBJCOPY = avr-objcopy
 CFLAGS = -mmcu=$(MCU) -DF_CPU=$(F_CPU) -Os
+CPPFLAGS = -MMD -MP
 
 # ----- Fichiers -----
 SRC = main.c
@@ -27,16 +28,21 @@ HEX = main.hex
 all: hex flash
 
 # règle hex : compile main.c -> main.bin -> main.hex
-hex: $(BIN)
-
-$(BIN): $(SRC)
-	$(CC) $(CFLAGS) -o $(BIN) $(SRC)
+hex: $(HEX)
+#headers
+#headers = $(wildcard *.h)
+$(BIN): $(SRC) #headers
+	$(CC) $(CPPFLAGS) $(CFLAGS)  -o $(BIN) $(SRC) 
+$(HEX): $(BIN)
 	$(OBJCOPY) -O ihex -R .eeprom $(BIN) $(HEX)
 
 # règle flash : envoie main.hex sur le microcontrôleur
 flash: $(HEX)
+	# Modifier la ligne ci-dessous selon ton programmateur
 	avrdude -p $(MCU) -c arduino -P /dev/ttyUSB0 -b 115200 -U flash:w:$(HEX):i
 
 # règle clean : supprime fichiers générés
 clean:
-	rm -f $(BIN) $(HEX)
+	rm -f $(BIN) $(HEX) *.d
+	
+.PHONY: all flash clean hex
